# secret-scrap2

./: HEAD  README.md  applypatch-msg.sample  cli.py  config.py  data_store.py  example-config.json  moves.README  pyproject.toml  render.yaml  scraper.py  sendemail-validate.sample  update.sample  url_generator.py
docs/: example-config.json
docs/docs/: INSTALLATION.md
ek_scraper/: cli.py  config.json  example-config.json
ek_scraper_improved/: Dockerfile  README.md  cli.py  config.py  dashboard.py  data_store.py  error.py  example-config.json  manage_scrapers.py  pyproject.toml  url_generator.py
ek_scraper_improved/ek_scraper/: Dockerfile  dashboard.py  manage_scrapers.py  pyproject.toml  render.yaml
ek_scraper_improved/ek_scraper/notifications/: nfty.py
src/ek_scraper/: __init__.py  cli.py  config.py  data_store.py  error.py  scraper.py  url_generator.py
src/ek_scraper/src/ek_scraper/notifications/: __init__.py
