[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ek-scraper"
version = "0.3.0"
description = "Optimized scraper for kleinanzeigen.de"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27.0",
  "aiohttp>=3.9.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "flask>=3.0.0",
  "psutil>=6.0.0",
]

[project.scripts]
ek-scraper = "ek_scraper.cli:main"

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
