[project]
name = "ek-scraper"
version = "0.2.0"
description = "Improved scraper for kleinanzeigen.de with better anti-blocking, filters and notifications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Original: jonasehrlich", email = "jonas.ehrlich@example.com"},
    {name = "Improved by Grok", email = "grok@x.ai"}
]
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-telegram-bot>=21.0",  # for Telegram notifications (optional but recommended)
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit",
]
playwright = [
    "playwright>=1.48.0",
]

[project.scripts]
ek-scraper = "ek_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ek_scraper"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]